surl_k8s/manifests/back.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: surl
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: surl-back:v1
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: surl
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 4000
  type: NodePort
