surl_k8s/manifests/front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: surl
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: surl-front:v1
          imagePullPolicy: Never

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: surl
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: NodePort
