surl_k8s/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: surl
spec:
  rules:
    - host: dosurl.duckdns.org
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
          - pathType: Prefix
            path: /api
            backend:
              service:
                name: backend-service
                port:
                  number: 4000
